<resources>
    <string name="app_name">งานภาครัฐ</string>
    <string name="tab_text_1">วุฒิ ป.ตรี</string>
    <string name="tab_text_2">วุฒิ ป.โท</string>
    <string name="tab_text_3">วุฒิ ป.เอก</string>
    <string name="tab_text_4">วุฒิ อื่น ๆ</string>
    <string name="action_settings">เกี่ยวกับ</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="bachelor_tab">วุฒิ ป.ตรี</string>
    <string name="master_tab">วุฒิ ป.โท</string>
    <string name="doctor_tab">วุฒิ ป.เอก</string>
    <string name="other_tab">วุฒิ อื่น ๆ</string>
    <string name="splashscreen_des">Hello Welcome to My Apps</string>
    <string name="Loadingscreen">Loading screen</string>
    <string name="model_pic_des">Model Pic</string>
    <string name="About1">เกี่ยวกับแอปงานภาครัฐ</string>
    <string name="About2">งานภาครัฐเป็นแอปฟรีที่ตั้งใจจัดทำขึ้นเพื่อประโยชน์แก่ทุกท่าน
        สามารถสนับสนุนผู้พัฒนาเพื่อปรับปรุงและพัฒนา
        แอปที่มีประโยชน์เพิ่มเติมได้ผ่านช่องทางนี้</string>
    <string name="model_pic_des2">About app pic</string>
    <string name="dev_by">UI/UX/Mobile Dev by Khunthongteam</string>
    <string name="bulb">bulb</string>
    <string name="myQR">my qr code</string>
    <string name="appversion">App. Version 1.0</string>
    <string name="infopic">infopic</string>
    <string name="contact2">www.paakrathapp.ga</string>
    <string name="contact1">ติดต่อผู้พัฒนาที่ khunthongteam@gmail.com</string>
    <string name="contactsingn1">contactsingn1</string>
    <string name="contactsingn2">contactsingn1</string>
    <string name="closebutt">closebutt</string>
    <string name="nointernetconnicon">nointernetconnicon</string>
    <string name="retrybutt">retrybutt</string>
    <string name="nointernettext">nointernettext</string>



</resources>
